add new button (1-9 numbers) on index_1.html

--- a/spotter/templates/spotter/index_1.html
+++ b/spotter/templates/spotter/index_1.html
@@ -9,11 +9,27 @@
  <body>
  	<h1>Введіть корегувальне значення в мм.</h1>
 
-	<form method="get" action="{% url 'index_2' %}">
-<!--		{% csrf_token %}-->
-<!--		{{form.as_p}}-->
+	<form method="get" action="{% url 'index_2' %}" name="form_correct">
 		<input type="text" name="correct_value">
+		<br><br>
 		<button type="submit">Прийняти</button>
+		<br><br>
+		<input type="button" value="1" onclick="form_correct.correct_value.value+='1'">
+		<input type="button" value="2" onclick="form_correct.correct_value.value+='2'">
+		<input type="button" value="3" onclick="form_correct.correct_value.value+='3'">
+		<br><br>
+		<input type="button" value="4" onclick="form_correct.correct_value.value+='4'">
+		<input type="button" value="5" onclick="form_correct.correct_value.value+='5'">
+		<input type="button" value="6" onclick="form_correct.correct_value.value+='6'">
+		<br><br>
+		<input type="button" value="7" onclick="form_correct.correct_value.value+='7'">
+		<input type="button" value="8" onclick="form_correct.correct_value.value+='8'">
+		<input type="button" value="9" onclick="form_correct.correct_value.value+='9'">
+		<br><br>
+		<input type="button" value="-" onclick="form_correct.correct_value.value+='-'">
+		<input type="button" value="0" onclick="form_correct.correct_value.value+='0'">
+		<input type="button" value="<" onclick="form_correct.correct_value.value= form_correct.correct_value.value.slice(0,-1)">
+
 	</form>
 
  	<form action="{% url 'home' %}">
